Fixed z-index for image background

--- a/css/main.css
+++ b/css/main.css
@@ -49,4 +49,5 @@ li {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: -1;
 }
